need to add sound effect to submit button

--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trivia Game</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/reset.css">
+
 </head>
 <body>
 <div id="container">
     <h1 id="title">The Office Trivia</h1>
     <div id="wrapper">
         <button id="start-button">Start</button>
-</div>
+    </div>
+    <audio id="andy" preload="auto" src="/assets/images/andy_bernard_sms.mp3"></audio>
 </div>
 
 <script
